<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activities.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/titleCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/titleLinear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/titleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/passkeep"
                android:textAlignment="center"
                android:textColor="#bf360c"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/subTitleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="@font/averia_libre_bold_italic"
                android:text="@string/your_own_password_manager"
                android:textAlignment="center"
                android:textColor="#ef6c00"
                android:textSize="20sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/menuBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/custom_buttons"
        android:padding="8dp"
        android:text="@string/retrieve"
        android:textColor="#ffab91"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/titleCard"
        app:layout_constraintStart_toStartOf="@+id/titleCard"
        app:layout_constraintTop_toTopOf="@+id/guideline10" />

    <Button
        android:id="@+id/authKeyBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_buttons"
        android:padding="8dp"
        android:text="@string/authentication_key"
        android:textColor="#ffab91"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/deleteBtn"
        app:layout_constraintStart_toStartOf="@+id/deleteBtn"
        app:layout_constraintTop_toBottomOf="@+id/deleteBtn" />

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_buttons"
        android:padding="8dp"
        android:text="@string/update"
        android:textColor="#ffab91"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/menuBtn"
        app:layout_constraintStart_toStartOf="@+id/menuBtn"
        app:layout_constraintTop_toBottomOf="@+id/menuBtn" />

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_buttons"
        android:padding="8dp"
        android:text="@string/delete"
        android:textColor="#ffab91"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/updateBtn"
        app:layout_constraintStart_toStartOf="@+id/updateBtn"
        app:layout_constraintTop_toBottomOf="@+id/updateBtn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>